[package]
name = "netpipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "4.3.1", features = ["openssl"] }
crossbeam = "0.8.2"
futures = "0.3.26"
itermore = "0.2.0"
libc = "0.2.135"
openssl = "0.10.45"
regex = "1.6.0"
tokio = { version = "1.25.0", features = ["full"] }
tungstenite = "0.17.3"
url = "2.3.1"
